--- a/FRONT-END/src/app/layout/topbar/topbar.component.html
+++ b/FRONT-END/src/app/layout/topbar/topbar.component.html
@@ -1,6 +1,10 @@
 <header class="topbar">
   <button (click)="toggleSidebarVisibility()" class="menu"> <i class="pi pi-bars"></i> </button>
 
+
+  <img src="/logo2.1.png" alt="Logo" class="logo">
+
+
   <button (click)="logout()" class="btn-logout"> <i class="pi pi-sign-out"></i> Cerrar sesión </button>
 
   <!-- Botón de usuario que muestra el overlay con la información -->
