--- a/FRONT-END/src/app/Auth/restore/restore.component.html
+++ b/FRONT-END/src/app/Auth/restore/restore.component.html
@@ -4,8 +4,7 @@
       <div class="bg-blue-500 rounded-full p-3 inline-block">
         <i class="fas fa-shield-alt text-white icono-escudo"></i>
       </div>
-      <h2 class="mt-6 text-2xl font-extrabold text-gray-900">Restablecer Contraseña</h2>
-      <p class="mt-2 text-sm text-gray-600">Ingresa tu nueva contraseña</p>
+      <h2 class="mt-6 text-2xl text-gray-900">Restablecer Contraseña</h2>
     </div>
 
     <form (ngSubmit)="onSubmit()" #form="ngForm" class="mt-8 space-y-6">
