--- a/FRONT-END/src/app/Auth/recover/recover.component.html
+++ b/FRONT-END/src/app/Auth/recover/recover.component.html
@@ -26,8 +26,8 @@
     </form>
 
     <div class="text-center mt-4">
-      <a routerLink="/" routerLinkActive="active" class="font-medium text-blue-600 hover:text-blue-500 cursor-pointer">
-        Volver al inicio de sesión
+      <a routerLink="/" routerLinkActive="active" class="font-medium text-blue-600 hover:text-blue-500 cursor-pointer no-underline">
+      Volver al inicio de sesión
       </a>
     </div>
   </div>
