--- a/FRONT-END/src/app/layout/topbar/topbar.component.html
+++ b/FRONT-END/src/app/layout/topbar/topbar.component.html
@@ -2,7 +2,7 @@
   <button (click)="toggleSidebarVisibility()" class="menu"> <i class="pi pi-bars"></i> </button>
 
 
-  <img src="/logo2.1.png" alt="Logo" class="logo">
+  <img src="/logo-name.JPG" alt="ComerciPlus" class="logo">
 
 
   <button (click)="logout()" class="btn-logout"> <i class="pi pi-sign-out"></i> Cerrar sesión </button>
