--- a/FRONT-END/src/styles.css
+++ b/FRONT-END/src/styles.css
@@ -1,10 +1,11 @@
-
 /* PrimeNG */
 @import "primeng/resources/themes/lara-light-blue/theme.css";
-@import "primeng/resources/primeng.css";
 @import "primeng/resources/primeng.min.css";
+
+/* Bootstrap Icons */
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 
+/* PrimeIcons */
 @import "primeicons/primeicons.css";
 
 /* Toastr */
@@ -14,7 +15,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Estilos globales*/
+/* Estilos globales */
 body {
   background-color: #f4f4f4;
 }
@@ -36,14 +37,13 @@ body {
 
 .p-inputtext {
   margin-top: 5px;
-    padding: 8px !important;
-  }
+  padding: 8px !important;
+}
 
 /* ALERTAS */
-
 .toast-success {
   background-color: #16a34ab6 !important;
-  color: #fff !important; 
+  color: #fff !important;
 }
 
 .toast-error {
@@ -52,8 +52,8 @@ body {
 }
 
 .toast-info {
-  background-color: #167ab4b7  !important;
-  color: #e0f7fa !important; 
+  background-color: #167ab4b7 !important;
+  color: #e0f7fa !important;
 }
 
 .toast-title {
@@ -63,6 +63,7 @@ body {
 .toast-message {
   font-size: 14px;
 }
+
 /* MODAL FORM */
 
 /* Botón Cancelar */
@@ -72,12 +73,12 @@ body {
 
 /* Botón de Guardar o Actualizar */
 .custom-save-btn {
-  color: rgb(56, 194, 56); 
+  color: rgb(56, 194, 56);
 }
 
 /* Botón de cambiar estado */
 .tipo-chip {
-  @apply text-sm rounded-full flex items-center justify-center !important; 
+  @apply text-sm rounded-full flex items-center justify-center !important;
   outline: none !important;
   box-shadow: none !important;
 }
@@ -88,7 +89,6 @@ body {
 
 .false-chip {
   @apply bg-red-100 text-red-800 w-24 h-10 border-red-200 !important;
-
 }
 
 /* Tamaño del botón */
@@ -96,8 +96,8 @@ body {
   font-size: 0.1rem;
   padding: 0.1rem;
 }
+
 /* Tamaño del icono del botón */
 .p-button.p-button-sm .p-button-icon {
   font-size: 1rem;
 }
-
