--- a/FRONT-END/src/app/layout/sidebar/sidebar.component.css
+++ b/FRONT-END/src/app/layout/sidebar/sidebar.component.css
@@ -133,3 +133,40 @@
 .submenu.show li:nth-child(1) { transition-delay: 50ms; }
 .submenu.show li:nth-child(2) { transition-delay: 100ms; }
 .submenu.show li:nth-child(3) { transition-delay: 150ms; }
+
+
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.sidebar-content {
+  flex-grow: 1;
+  overflow-y: auto;
+}
+
+.sidebar-help-section {
+  margin-top: auto;
+  padding-top: 1rem;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.sidebar-help-section .item {
+  display: flex;
+  align-items: center;
+  padding: 0.7rem;
+  transition: background-color 0.2s ease, box-shadow 0.2s ease;
+  cursor: pointer;
+}
+
+.sidebar-help-section .item:hover {
+  background-color: rgba(229, 229, 238, 0.342);
+}
+
+.sidebar-help-section .item a {
+  text-decoration: none;
+  color: var(--text-color);
+  cursor: pointer;
+}
